--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "Sortis",
+  "id":"/index.html",
   "short_name": "Sortis",
   "start_url": "/index.html",
   "display": "standalone",
@@ -9,20 +10,20 @@
     {
       "src": "/android-launchericon-96-96.png",
       "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
+    
     },
     {
       "src": "/android-launchericon-144-144.png",
       "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
+      
     },
     {
       "src": "/android-launchericon-192-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
+      
     }
   ],
   "screenshots": [
