--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.4",
     "workbox-core": "^7.1.0",
     "workbox-expiration": "^7.1.0",
@@ -48,6 +49,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "tailwindcss": "^4.0.8",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
