--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "draft-js": "^0.11.7",
     "emailjs-com": "^3.2.0",
+    "firebase": "^11.7.3",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
