Add toast alerts

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ VITE_APP_PAYPAL_SECRET=ECFdi0CmstLotjCpYgYQdzMdz13LBeGnTTN5hm8otfiAzjtlh3sbn_qy7
 
 
 VITE_APP_API_FIREBASE_KEY=BMsRu7OOKZSW3hKVRO29l0Hg-nKScLWJjd3hcXiWxLr4TJgCWqqjG-gHE8hZASSpjxYf8LwZ4hTDE2-ZqTf7swc
+
+VITE_FIREBASE_API_KEY=AIzaSyCZ6Xfod-2hkGfAb3_iqZlJlHcAknH4HhU
