Actualizar la configuración de PayPal y agregar un nuevo plan de suscripción de 2 minutos. Refactorizar la carga del SDK de PayPal y limpiar el almacenamiento local.

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-VITE_APP_PAYPAL_CLIENT_ID=AeLp0pscZ92wImVEIauH55-QoVaIDLByAW51YziCIUMweUuQAUfpxW15pnnVjxJoaEcqPSL-gedT-lUi
-VITE_APP_PAYPAL_SECRET=ECFdi0CmstLotjCpYgYQdzMdz13LBeGnTTN5hm8otfiAzjtlh3sbn_qy7xUa6YO8Do29kXXrCv3cIBp0
+VITE_APP_PAYPAL_CLIENT_ID=Abmtk1OUaojSV9bvyT9O5aYR69q6gCscWraxf8pGcYhx9jirbJxEtalrSYj_GRpkfvs2IZxdJ-S5k-EW
+VITE_APP_PAYPAL_SECRET=EOOZTJY2GB80ecAHba_Z5K7uXXSw7a77GIpRuClj538rkfOyYydRsGfJQOnNV-791kxrTrievBwz5LCs
 
+VITE_APP_PAYPAL_API_URL=https://api-m.paypal.com
 
 VITE_APP_API_FIREBASE_KEY=BMsRu7OOKZSW3hKVRO29l0Hg-nKScLWJjd3hcXiWxLr4TJgCWqqjG-gHE8hZASSpjxYf8LwZ4hTDE2-ZqTf7swc
 
