--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,40 @@
+# ============================
+# Redirección SPA (React/Vue/Angular)
+# ============================
 RewriteEngine On
 RewriteBase /
-RewriteRule ^index\.html$ - [L]
 
-# Redirige todo lo que no sea archivo o carpeta al index.html
+# Si no existe archivo o carpeta, enviar index.html
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.html [L]
+RewriteRule ^ index.html [L]
+
+# ============================
+# Cacheo inteligente para PWA
+# ============================
+<IfModule mod_expires.c>
+  ExpiresActive On
+
+  # Archivos estáticos (caché fuerte)
+  ExpiresByType image/jpg "access plus 1 month"
+  ExpiresByType image/jpeg "access plus 1 month"
+  ExpiresByType image/png "access plus 1 month"
+  ExpiresByType image/gif "access plus 1 month"
+  ExpiresByType image/svg+xml "access plus 1 month"
+  ExpiresByType text/css "access plus 1 month"
+  ExpiresByType application/javascript "access plus 1 month"
+
+  # HTML y archivos críticos (no caché fuerte)
+  ExpiresByType text/html "access plus 0 seconds"
+
+  # Archivos que deben actualizarse siempre
+  <FilesMatch "(^service-worker\.js$|^manifest\.json$|^index\.html$)">
+    ExpiresDefault "access plus 0 seconds"
+    Header set Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0"
+  </FilesMatch>
+</IfModule>
+
+# ============================
+# Forzar codificación
+# ============================
+AddDefaultCharset utf-8
