feat: Refactor SelectSigno component to navigate to register page and remove setState prop
fix: Update Tarotista component to conditionally render online status

refactor: Simplify Dashboard component by removing online toggle button and handling online status in useEffect

feat: Enhance DashboardAll component with real-time online/offline status for tarotistas and toggle functionality

refactor: Optimize DashboardUser component to use global socket for real-time updates and improve user experience

fix: Update Landing page link to navigate to signos instead of register

fix: Improve Plan component's PayPal integration for better error handling and session creation

feat: Enhance Register component with password visibility toggle and localStorage persistence for form data

refactor: Simplify TermsAndConditions component and add navigation back to register

feat: Create useGlobalSocket hook for managing socket connections across components

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_APP_PAYPAL_CLIENT_ID=Abmtk1OUaojSV9bvyT9O5aYR69q6gCscWraxf8pGcYhx9jirbJxEtalrSYj_GRpkfvs2IZxdJ-S5k-EW
+VITE_APP_PAYPAL_CLIENT_ID=Abmtk1OUaojSV9bvyT9O5aYR69q6gCscWraxf8pGcYhx9jirbJxEtalrSYj_GRpkfvs2IZxdJ-S5k-EW 
 VITE_APP_PAYPAL_SECRET=EOOZTJY2GB80ecAHba_Z5K7uXXSw7a77GIpRuClj538rkfOyYydRsGfJQOnNV-791kxrTrievBwz5LCs
 
 VITE_APP_PAYPAL_API_URL=https://api-m.paypal.com
@@ -6,3 +6,21 @@ VITE_APP_PAYPAL_API_URL=https://api-m.paypal.com
 VITE_APP_API_FIREBASE_KEY=BMsRu7OOKZSW3hKVRO29l0Hg-nKScLWJjd3hcXiWxLr4TJgCWqqjG-gHE8hZASSpjxYf8LwZ4hTDE2-ZqTf7swc
 
 VITE_FIREBASE_API_KEY=AIzaSyCZ6Xfod-2hkGfAb3_iqZlJlHcAknH4HhU
+
+
+# producción  
+# Abmtk1OUaojSV9bvyT9O5aYR69q6gCscWraxf8pGcYhx9jirbJxEtalrSYj_GRpkfvs2IZxdJ-S5k-EW  
+# EOOZTJY2GB80ecAHba_Z5K7uXXSw7a77GIpRuClj538rkfOyYydRsGfJQOnNV-791kxrTrievBwz5LCs  
+
+
+
+
+
+
+
+
+
+
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+PAYPAL_API_URL=
